# RCompiler

./: .gitignore  CMakeLists.txt  README.md
docs/: current.md  plan.md  rule.md  todo.md  todo2.md
docs/lexer/: README.md
docs/parser/: README.md  rule.md
docs/semantic/: README.md  const_value.md  struct_checker.md  symbol.md  symbol_collect.md  symbol_implementation.md  type_checker.md
include/: astnode.hpp  lexer.hpp  parser.hpp  utils.hpp  visitor.hpp
include/lexer/: lexer.hpp
include/parser/: astnode.hpp  astprinter.hpp  parser.hpp  utils.hpp  visitor.hpp
include/semantic/: const_evaluator.hpp  const_value.hpp  scope.hpp  struct_checker.hpp  symbol.hpp  symbol_collector.hpp  type_checker.hpp  utils.hpp
src/: astnode.cpp  lexer.cpp  main.cpp  parser.cpp  visitor.cpp
src/lexer/: lexer.cpp
src/parser/: astnode.cpp  astprinter.cpp  parser.cpp  visitor.cpp
src/semantic/: const_evaluator.cpp  const_value.cpp  scope.cpp  struct_checker.cpp  symbol.cpp  symbol_collector.cpp  type_checker.cpp
test/: README.md  array_symbol_test.cpp  const_value_test.cpp  method_type_test.cpp  parser_test.cpp  parser_test.py  parser_test_simple.py  parser_visualize_test.cpp  result1.txt  result2.txt  run_sema1_tests.py  run_sema2_test.py  run_test1.cpp  run_test2.cpp  scope_test.cpp  sema1_result.txt  sema1_result_fetcher.py  sema1_test_result.md  sema2_result_fetcher.py  symbol_test.cpp  test_runner_README.md
